--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="format-detection" content="address=no">
   <title>和BRITA交新朋友 - momo購物網</title>
-  <link rel="stylesheet" type="text/css" href="./images/Layout.css?d=20220508">
-  <link rel="stylesheet" type="text/css" href="./images/uiLayout.css">
+  <link rel="stylesheet" type="text/css" href="images/Layout.css?d=20220508">
+  <link rel="stylesheet" type="text/css" href="images/uiLayout.css">
 </head>
 
 <body>
@@ -38,40 +38,40 @@
     <div class="Area Area1220 Area_top">
       <div class="box">
         <div class="momologo"><a href="https://www.momoshop.com.tw/main/Main.jsp"></a></div>
-        <a href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img class="for_pc" src="./images/main.jpg"></a>
-        <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img class="for_phone" src="./images/main.jpg"></a>
+        <a href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img class="for_pc" src="images/main.jpg"></a>
+        <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img class="for_phone" src="images/main.jpg"></a>
       </div>
     </div>
 
     <!-- PC -->
     <div class="Area Area1220 for_pc">
-      <a href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"> <img src="./images/01.jpg?d=20220508"></a>
+      <a href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"> <img src="images/01.jpg?d=20220508"></a>
 
       <div class="partArea1">
         <div class="Area_1bn_nopadding">
-            <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="./images/part1_01.png"></a>
+            <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="images/part1_01.png"></a>
         </div>
         
         <div class="Area_3bn_nopadding">
-          <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="./images/part1_02.png"></a>
-          <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="./images/part1_03.png"></a>
-          <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="./images/part1_04.png"></a>
+          <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="images/part1_02.png"></a>
+          <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="images/part1_03.png"></a>
+          <a class="go_bt" href="https://www.momoshop.com.tw/category/LgrpCategory.jsp?l_code=2110000000"><img src="images/part1_04.png"></a>
         </div>
-        <img src="./images/02.jpg?d=20220508">
+        <img src="images/02.jpg?d=20220508">
       </div>
 
       <div class="partArea2">
         <div class="Area_1bn_nopadding">
-            <a class="go_bt2" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9683034"><img src="./images/part2_01.jpg"></a>
-            <a class="go_bt2" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9899026"><img src="./images/part2_02.jpg"></a>
-            <a class="go_bt2" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9248015"><img src="./images/part2_03.jpg"></a>
+            <a class="go_bt2" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9683034"><img src="images/part2_01.jpg"></a>
+            <a class="go_bt2" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9899026"><img src="images/part2_02.jpg"></a>
+            <a class="go_bt2" href="https://www.momoshop.com.tw/goods/GoodsDetail.jsp?i_code=9248015"><img src="images/part2_03.jpg"></a>
         </div>
-        <img src="./images/03.jpg?d=20220508">
+        <img src="images/03.jpg?d=20220508">
       </div>
 
       <div class="partArea3">
         <div class="Area_1bn_nopadding">
-          <a><img src="./images/part3_01.png"></a>
+          <a><img src="images/part3_01.png"></a>
         </div>
 
         <div class="momoStyle_yt_block">
@@ -81,19 +81,19 @@
         </div>
 
         <div class="Area_2bn_nopadding">
-            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=1705300188&p_orderType=4"><img src="./images/part3_02.png"></a>
-            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=1705300188&p_orderType=4"><img src="./images/part3_03.png"></a>
+            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=1705300188&p_orderType=4"><img src="images/part3_02.png"></a>
+            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=1705300188&p_orderType=4"><img src="images/part3_03.png"></a>
         </div>
 
         <div class="Area_1bn_nopadding_sec">
-          <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=1705300188&p_orderType=4"><img src="./images/part3_04.png"></a>
+          <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=1705300188&p_orderType=4"><img src="images/part3_04.png"></a>
         </div>
-        <img src="./images/04.jpg?d=20220508">
+        <img src="images/04.jpg?d=20220508">
       </div>
 
       <div class="partArea3">
         <div class="Area_1bn_nopadding">
-          <a><img src="./images/part4_01.png"></a>
+          <a><img src="images/part4_01.png"></a>
         </div>
 
         <div class="momoStyle_yt_block">
@@ -103,19 +103,19 @@
         </div>
 
         <div class="Area_2bn_nopadding">
-            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2906500064"><img src="./images/part4_02.png"></a>
-            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2906500064"><img src="./images/part4_03.png"></a>
+            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2906500064"><img src="images/part4_02.png"></a>
+            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2906500064"><img src="images/part4_03.png"></a>
         </div>
 
         <div class="Area_1bn_nopadding_sec">
-          <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2906500064"><img src="./images/part4_04.png"></a>
+          <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=2906500064"><img src="images/part4_04.png"></a>
         </div>
-        <img src="./images/05.jpg?d=20220508">
+        <img src="images/05.jpg?d=20220508">
       </div>
 
       <div class="partArea3">
         <div class="Area_1bn_nopadding">
-          <a><img src="./images/part5_01.png"></a>
+          <a><img src="images/part5_01.png"></a>
         </div>
 
         <div class="momoStyle_yt_block">
@@ -125,47 +125,47 @@
         </div>
 
         <div class="Area_2bn_nopadding sec_padding_fix">
-            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=5200200022&p_orderType=4"><img src="./images/part5_02.png"></a>
-            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=5200200022&p_orderType=4"><img src="./images/part5_03.png"></a>
+            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=5200200022&p_orderType=4"><img src="images/part5_02.png"></a>
+            <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=5200200022&p_orderType=4"><img src="images/part5_03.png"></a>
         </div>
 
         <div class="Area_1bn_nopadding_sec sec_padding_fix">
-          <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=5200200022&p_orderType=4"><img src="./images/part5_04.png"></a>
+          <a class="go_bt" href="https://www.momoshop.com.tw/category/DgrpCategory.jsp?d_code=5200200022&p_orderType=4"><img src="images/part5_04.png"></a>
         </div>
-        <img src="./images/06.jpg?d=20220508">
+        <img src="images/06.jpg?d=20220508">
       </div>
     </div>
   
 
   <!-- MB -->
   <div class="Area Area1220 for_phone">
-    <a> <img src="./images/01.jpg?d=20220508"></a>
+    <a> <img src="images/01.jpg?d=20220508"></a>
 
       <div class="partArea1">
         <div class="Area_1bn_nopadding">
-            <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="./images/part1_01.png"></a>
+            <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="images/part1_01.png"></a>
         </div>
         
         <div class="Area_3bn_nopadding">
-          <a  href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="./images/part1_02.png"></a>
-          <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="./images/part1_03.png"></a>
-          <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="./images/part1_04.png"></a>
+          <a  href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="images/part1_02.png"></a>
+          <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="images/part1_03.png"></a>
+          <a href="https://m.momoshop.com.tw/category.momo?cn=2110000000"><img src="images/part1_04.png"></a>
         </div>
-        <img src="./images/02.jpg?d=20220508">
+        <img src="images/02.jpg?d=20220508">
       </div>
 
       <div class="partArea2">
         <div class="Area_1bn_nopadding">
-            <a href="https://m.momoshop.com.tw/goods.momo?i_code=9683034"><img src="./images/part2_01.jpg"></a>
-            <a href="https://m.momoshop.com.tw/goods.momo?i_code=9899026"><img src="./images/part2_02.jpg"></a>
-            <a href="https://m.momoshop.com.tw/goods.momo?i_code=9248015"><img src="./images/part2_03.jpg"></a>
+            <a href="https://m.momoshop.com.tw/goods.momo?i_code=9683034"><img src="images/part2_01.jpg"></a>
+            <a href="https://m.momoshop.com.tw/goods.momo?i_code=9899026"><img src="images/part2_02.jpg"></a>
+            <a href="https://m.momoshop.com.tw/goods.momo?i_code=9248015"><img src="images/part2_03.jpg"></a>
         </div>
-        <img src="./images/03.jpg?d=20220508">
+        <img src="images/03.jpg?d=20220508">
       </div>
 
       <div class="partArea3">
         <div class="Area_1bn_nopadding">
-          <a><img src="./images/part3_01.png"></a>
+          <a><img src="images/part3_01.png"></a>
         </div>
 
         <div class="momoStyle_yt_block">
@@ -175,19 +175,19 @@
         </div>
 
         <div class="Area_2bn_nopadding">
-            <a href="https://m.momoshop.com.tw/category.momo?cn=1705300188&sortType=4"><img src="./images/part3_02.png"></a>
-            <a href="https://m.momoshop.com.tw/category.momo?cn=1705300188&sortType=4"><img src="./images/part3_03.png"></a>
+            <a href="https://m.momoshop.com.tw/category.momo?cn=1705300188&sortType=4"><img src="images/part3_02.png"></a>
+            <a href="https://m.momoshop.com.tw/category.momo?cn=1705300188&sortType=4"><img src="images/part3_03.png"></a>
         </div>
 
         <div class="Area_1bn_nopadding_sec">
-          <a href="https://m.momoshop.com.tw/category.momo?cn=1705300188&sortType=4"><img src="./images/part3_04.png"></a>
+          <a href="https://m.momoshop.com.tw/category.momo?cn=1705300188&sortType=4"><img src="images/part3_04.png"></a>
         </div>
-        <img src="./images/04.jpg?d=20220508">
+        <img src="images/04.jpg?d=20220508">
       </div>
 
       <div class="partArea3">
         <div class="Area_1bn_nopadding">
-          <a><img src="./images/part4_01.png"></a>
+          <a><img src="images/part4_01.png"></a>
         </div>
 
         <div class="momoStyle_yt_block">
@@ -197,19 +197,19 @@
         </div>
 
         <div class="Area_2bn_nopadding">
-            <a href="https://m.momoshop.com.tw/category.momo?cn=2906500064"><img src="./images/part4_02.png"></a>
-            <a href="https://m.momoshop.com.tw/category.momo?cn=2906500064"><img src="./images/part4_03.png"></a>
+            <a href="https://m.momoshop.com.tw/category.momo?cn=2906500064"><img src="images/part4_02.png"></a>
+            <a href="https://m.momoshop.com.tw/category.momo?cn=2906500064"><img src="images/part4_03.png"></a>
         </div>
 
         <div class="Area_1bn_nopadding_sec">
-          <a href="https://m.momoshop.com.tw/category.momo?cn=2906500064"><img src="./images/part4_04.png"></a>
+          <a href="https://m.momoshop.com.tw/category.momo?cn=2906500064"><img src="images/part4_04.png"></a>
         </div>
-        <img src="./images/05.jpg?d=20220508">
+        <img src="images/05.jpg?d=20220508">
       </div>
 
       <div class="partArea3">
         <div class="Area_1bn_nopadding">
-          <a><img src="./images/part5_01.png"></a>
+          <a><img src="images/part5_01.png"></a>
         </div>
 
         <div class="momoStyle_yt_block">
@@ -219,14 +219,14 @@
         </div>
 
         <div class="Area_2bn_nopadding sec_padding_fix">
-            <a href="https://m.momoshop.com.tw/cateGoods.momo?cn=5200200022&sortType=4"><img src="./images/part5_02.png"></a>
-            <a href="https://m.momoshop.com.tw/cateGoods.momo?cn=5200200022&sortType=4"><img src="./images/part5_03.png"></a>
+            <a href="https://m.momoshop.com.tw/cateGoods.momo?cn=5200200022&sortType=4"><img src="images/part5_02.png"></a>
+            <a href="https://m.momoshop.com.tw/cateGoods.momo?cn=5200200022&sortType=4"><img src="images/part5_03.png"></a>
         </div>
 
         <div class="Area_1bn_nopadding_sec sec_padding_fix_sec">
-          <a href="https://m.momoshop.com.tw/cateGoods.momo?cn=5200200022&sortType=4"><img src="./images/part5_04.png"></a>
+          <a href="https://m.momoshop.com.tw/cateGoods.momo?cn=5200200022&sortType=4"><img src="images/part5_04.png"></a>
         </div>
-        <img src="./images/06.jpg?d=20220508">
+        <img src="images/06.jpg?d=20220508">
       </div>
     </div>
 
@@ -248,7 +248,7 @@
   <!-- ↑套件↑ -->
 
   <!--呼叫JS-->
-  <script charset="utf-8" language="javascript" type="text/javascript" src="./images/main.js"></script>
+  <script charset="utf-8" language="javascript" type="text/javascript" src="images/main.js"></script>
 <script>
   document 
 </script>
